--- a/src/MusicAlbums.Api/MusicAlbums.Api.csproj
+++ b/src/MusicAlbums.Api/MusicAlbums.Api.csproj
@@ -1,23 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <Nullable>enable</Nullable>
-        <ImplicitUsings>enable</ImplicitUsings>
-      <UserSecretsId>7a92e5a8-f48f-40dc-a441-c1e2b0202399</UserSecretsId>
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>7a92e5a8-f48f-40dc-a441-c1e2b0202399</UserSecretsId>
   </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
-        <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.19" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.19" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Asp.Versioning.Mvc" />
+    <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    <PackageReference Include="Swashbuckle.AspNetCore" />
+  </ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\MusicAlbums.Application\MusicAlbums.Application.csproj" />
-      <ProjectReference Include="..\MusicAlbums.Contracts\MusicAlbums.Contracts.csproj" />
-    </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MusicAlbums.Application\MusicAlbums.Application.csproj" />
+    <ProjectReference Include="..\MusicAlbums.Contracts\MusicAlbums.Contracts.csproj" />
+  </ItemGroup>
 
 </Project>
