--- a/src/MusicAlbums.Application/MusicAlbums.Application.csproj
+++ b/src/MusicAlbums.Application/MusicAlbums.Application.csproj
@@ -7,11 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Dapper" Version="2.1.66" />
-      <PackageReference Include="Dapper.SqlBuilder" Version="2.1.66" />
-      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
-      <PackageReference Include="Npgsql" Version="9.0.3" />
+        <PackageReference Include="Dapper" />
+        <PackageReference Include="Dapper.SqlBuilder" />
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+        <PackageReference Include="Npgsql" />
+        <PackageReference Include="Polly" />
     </ItemGroup>
 
 </Project>
