feat: Add Azure DevOps CI/CD pipeline and Bicep infrastructure

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@ Properties/launchSettings.json
 
 # JetBrains Rider
 .idea/
+
+# Azure Infrastructure Parameters (sensitive information)
+parameters.json
+*.bicepparam
+!*.sample.bicepparam
