--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,15 +2,19 @@
 # Music Albums API - Azure DevOps Pipeline
 # ============================================================================
 # This pipeline builds and deploys the Music Albums API to Azure Container Apps
-# 
+#
 # Required Variables (set in Azure DevOps Pipeline Variables or Variable Groups):
 # - ACR_NAME: Azure Container Registry name
-# - AZURE_SUBSCRIPTION: Azure subscription ID
 # - RESOURCE_GROUP: Azure resource group name
 # - PG_ADMIN_LOGIN: PostgreSQL admin username
 # - PG_ADMIN_PASSWORD: PostgreSQL admin password (secret)
 # - JWT_KEY: JWT signing key (secret)
 # - API_KEY: Admin API key (secret)
+# - DeployInfra: Set to 'true' to deploy infrastructure (default: false)
+#
+# Required Service Connections:
+# - acr-service-connection: Docker Registry connection to ACR
+# - azure-service-connection: Azure Resource Manager connection
 # ============================================================================
 
 trigger:
@@ -34,30 +38,30 @@ pr:
       - infra/**
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: "ubuntu-latest"
 
 variables:
-  imageRepository: 'music-albums-api'
-  dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
-  tag: '$(Build.BuildId)'
+  imageRepository: "music-albums-api"
+  dockerfilePath: "$(Build.SourcesDirectory)/Dockerfile"
+  tag: "$(Build.BuildId)"
 
 stages:
   # ============================================================================
   # Build Stage
   # ============================================================================
   - stage: Build
-    displayName: 'Build and Push'
+    displayName: "Build and Push"
     jobs:
       - job: Build
-        displayName: 'Build Docker Image'
+        displayName: "Build Docker Image"
         steps:
           - task: Docker@2
-            displayName: 'Build and push to ACR'
+            displayName: "Build and push to ACR"
             inputs:
-              containerRegistry: 'acr-service-connection'
-              repository: '$(imageRepository)'
-              command: 'buildAndPush'
-              Dockerfile: '$(dockerfilePath)'
+              containerRegistry: "acr-service-connection"
+              repository: "$(imageRepository)"
+              command: "buildAndPush"
+              Dockerfile: "$(dockerfilePath)"
               tags: |
                 $(tag)
                 latest
@@ -95,19 +99,19 @@ stages:
   # Deploy Infrastructure Stage (optional - run manually or on infra changes)
   # ============================================================================
   - stage: DeployInfra
-    displayName: 'Deploy Infrastructure'
-    dependsOn: Build  # TODO: Change to Test when tests are implemented
+    displayName: "Deploy Infrastructure"
+    dependsOn: Build # TODO: Change to Test when tests are implemented
     condition: and(succeeded(), eq(variables['DeployInfra'], 'true'))
     jobs:
       - job: DeployBicep
-        displayName: 'Deploy Bicep Template'
+        displayName: "Deploy Bicep Template"
         steps:
           - task: AzureCLI@2
-            displayName: 'Deploy infrastructure'
+            displayName: "Deploy infrastructure"
             inputs:
-              azureSubscription: 'azure-service-connection'
-              scriptType: 'bash'
-              scriptLocation: 'inlineScript'
+              azureSubscription: "azure-service-connection"
+              scriptType: "bash"
+              scriptLocation: "inlineScript"
               inlineScript: |
                 az deployment group create \
                   --resource-group $(RESOURCE_GROUP) \
@@ -124,13 +128,13 @@ stages:
   # Deploy Application Stage
   # ============================================================================
   - stage: DeployApp
-    displayName: 'Deploy Application'
-    dependsOn: Build  # TODO: Change to Test when tests are implemented
+    displayName: "Deploy Application"
+    dependsOn: Build # TODO: Change to Test when tests are implemented
     condition: succeeded()
     jobs:
       - deployment: DeployToAzure
-        displayName: 'Deploy to Container Apps'
-        environment: 'production'
+        displayName: "Deploy to Container Apps"
+        environment: "production"
         strategy:
           runOnce:
             deploy:
@@ -138,11 +142,11 @@ stages:
                 - checkout: self
 
                 - task: AzureCLI@2
-                  displayName: 'Update Container App'
+                  displayName: "Update Container App"
                   inputs:
-                    azureSubscription: 'azure-service-connection'
-                    scriptType: 'bash'
-                    scriptLocation: 'inlineScript'
+                    azureSubscription: "azure-service-connection"
+                    scriptType: "bash"
+                    scriptLocation: "inlineScript"
                     inlineScript: |
                       az containerapp update \
                         --name music-albums-api \
@@ -150,21 +154,21 @@ stages:
                         --image $(ACR_NAME).azurecr.io/$(imageRepository):$(tag)
 
                 - task: AzureCLI@2
-                  displayName: 'Verify deployment'
+                  displayName: "Verify deployment"
                   inputs:
-                    azureSubscription: 'azure-service-connection'
-                    scriptType: 'bash'
-                    scriptLocation: 'inlineScript'
+                    azureSubscription: "azure-service-connection"
+                    scriptType: "bash"
+                    scriptLocation: "inlineScript"
                     inlineScript: |
                       # Wait for deployment to stabilize
                       sleep 30
-                      
+
                       # Get the app URL and check health
                       APP_URL=$(az containerapp show \
                         --name music-albums-api \
                         --resource-group $(RESOURCE_GROUP) \
                         --query "properties.configuration.ingress.fqdn" -o tsv)
-                      
+
                       echo "Checking health at https://$APP_URL/_health"
                       curl -f "https://$APP_URL/_health" || exit 1
                       echo "Deployment successful!"
