--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,6 +54,8 @@ stages:
     jobs:
       - job: Build
         displayName: Build Docker Image
+        variables:
+          DOCKER_BUILDKIT: 1
         steps:
           - task: Docker@2
             displayName: Build Docker image
@@ -62,7 +64,6 @@ stages:
               repository: '$(imageRepository)'
               command: build
               Dockerfile: '$(dockerfilePath)'
-              addPipelineData: false
               tags: |
                 $(tag)
                 latest
